--- a/TODO
+++ b/TODO
@@ -1,7 +1,13 @@
-Refactor main, its getting to large split it up in internal functions and import
-Add string litterals for the here douments to create backups of eeprom and nand
+Print out player info to user after pawning the player model version region etc ...
+
+Create menu where I can select to backup nand and eeprom
+patch player select patches thats optional one by one
+import "github.com/dixonwille/wmenu/v5"
+
+
+
 Change the formatting for the payloads so they easier to understand
+
 Create a shell script to create a new drive.img file with custom content
-Reasearch tools to write the drive.img file from multi OS remove that part from tool add to documentation
-Create options to main for pawning player vs patching player
- 
+
+Reasearch tools to write the drive.img file from multi OS remove that part from tool add to documentation 
